--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
 
-    "description": "Easier image copy paste powerpoint.",
+    "description": "Copy buttons!",
     "manifest_version": 2,
-    "name": "image_from_web_the_easy_way",
+    "name": "Copy buttons!",
     "version": "1.0",
     "content_scripts": [
         {
